<resources>
    <string name="app_name">LoveBus</string>
    <string name="next">跳过</string>
    <string name="login">登陆</string>
    <string name="search_hint">请输入关键词</string>
    <string name="account_string">账号</string>
    <string name="password_string">密码</string>
    <string name="forget_password_string">忘记密码？</string>
    <string name="login_1_text">还没有账号？</string>
    <string name="login_2_text">立即注册</string>
    <string name="register_phone">手机号</string>
    <string name="password_string_confirm">确认密码</string>
    <string name="register_nickname">昵称</string>
    <string name="register">注册</string>
    <string name="register_1_text">已有账号？</string>
    <string name="register_2_text">立即登陆</string>
    <string name="user_f_login">爱公交游客用户</string>
    <string name="user_city">当前设定城市:</string>
    <string name="user_city_set">北京</string>
    <string name="city_change">切换地址</string>
    <string name="logout">退出登陆</string>
    <string name="update_password">修改密码</string>
    <string name="old_password">原密码</string>
    <string name="new_password">新密码</string>
    <string name="new_password_r">确认密码</string>
    <string name="update_r">确认提交</string>
    <string name="todo">TODO</string>
    <string name="no_result">对不起，没有搜索到相关数据！</string>
    <string name="collect">收藏</string>
    <string name="route">路线</string>
    <string name="poiclick">兴趣点</string>
    <string name="distance">距离</string>
    <string name="notice">通知</string>
    <string name="near">附近站点</string>
    <string name="user_put">用户反馈</string>
    <string name="user_put2">填写您想要反馈的信息吧^_^</string>
</resources>
