<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android= "http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_password_change"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/change_bg"
    tools:context="com.lovebus.activity.UpdatePasswordActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/update_password"
            android:textColor="#75ACD0"
            android:gravity="center"
            android:textSize="20sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:paddingLeft="60dp">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/register_1"/>
        <EditText
            android:id="@+id/old_password"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:paddingLeft="10dp"
            android:textCursorDrawable="@drawable/edit_cursor_color"
            android:background="@null"
            android:singleLine="true"
            android:hint="@string/old_password"
            android:textSize="14sp"
            android:inputType="textPassword"
            android:textColorHint="#75ACD0"
            android:imeOptions="actionNext"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:paddingLeft="60dp">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/sign_in_1"/>
        <EditText
            android:id="@+id/register_password"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:paddingLeft="10dp"
            android:textCursorDrawable="@drawable/edit_cursor_color"
            android:background="@null"
            android:inputType="textPassword"
            android:singleLine="true"
            android:maxLength="16"
            android:hint="@string/new_password"
            android:textSize="14dp"
            android:textColorHint="#75ACD0"
            android:imeOptions="actionNext"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:paddingLeft="60dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/sign_in_1"/>

        <EditText
            android:id="@+id/register_password_confirm"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:hint="@string/new_password_r"
            android:imeOptions="actionDone"
            android:textCursorDrawable="@drawable/edit_cursor_color"
            android:background="@null"
            android:maxLength="16"
            android:paddingLeft="10dp"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColorHint="#75ACD0"
            android:textSize="14dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="450dp"
        android:orientation="vertical"
        android:id="@+id/linearLayout">
        <Button
            android:id="@+id/update"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/round_rectangle_shape"
            android:text="@string/update_r"
            android:textColor="#ffffff"
            android:layout_marginBottom="20dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />
    </LinearLayout>


</RelativeLayout>